一分钟    的卡片和名称

--- a/输入文本.md
+++ b/输入文本.md
@@ -1,4 +1,4 @@
-I'd like to talk about my cousin, Li Hua. He's not just family, but also a very close friend. He's a few years older than me, and he works as a software engineer in Shenzhen, where we both grew up.
-Recently, he learned how to play the guitar. He taught himself completely from scratch. I remember he started about two years ago. He bought his first guitar and just began practicing using online tutorials and apps.
-The main reason he learned was for relaxation. His job as a programmer can be quite stressful, with long hours in front of the computer. He told me he wanted a hobby that was completely different, something creative and hands-on. He also loves music, so the guitar seemed like a perfect choice. I remember him saying he wanted to be able to play at our family gatherings.
-I think for him, learning by himself was actually easier than learning from a teacher. He's a very independent and patient person. He could practice whenever he had free time, like late at night after work. He used apps that showed him chords and listened to songs slowly to figure out the notes. For his personality and busy schedule, this self-paced method worked really well. A fixed class with a teacher might have felt like more pressure. Now, he plays beautifully, and he even taught me a few basic chords last summer. It was a great way for us to connect, especially since I'm now studying in Dalian. 
+I'd like to talk about my cousin, Li Hua. He's a software engineer, a few years older than me, and we both grew up in Shenzhen. He's a very clever and patient person.
+The problem he solved was something he noticed in our local community. Many elderly people, like my own grandparents, were struggling to use their new smartphones. They wanted to video call their families or use messaging apps, but they found the interfaces too complicated and confusing. They felt a bit left behind by technology.
+He solved it in a very clever way. First, he spent a few weekends at the community center, patiently teaching them the basics. But he realized they often forgot the steps. So, being a programmer, he decided to build a simple app. He used Python to create a tool with a very clean interface—just a few big, colorful buttons for functions like "Video Call" or "Send Message." It was like a shortcut that bypassed all the complicated menus. He even made paper guides with QR codes that linked to his app.
+I think his method was smart for a few reasons. First, he didn't just give instructions; he created a lasting, practical tool. Second, he used his professional skills in a very kind and useful way. I remember seeing him help my grandma use it to call me when I was in my dorm in Dalian. . It showed me that smart problem-solving isn't just about complex code, but about understanding people's real needs and making their lives easier.
