--- a/输入文本.md
+++ b/输入文本.md
@@ -1,4 +1,5 @@
-I'd like to talk about my cousin, Li Hua. He's a software engineer, a few years older than me, and we both grew up in Shenzhen. He's a very clever and patient person.
-The problem he solved was something he noticed in our local community. Many elderly people, like my own grandparents, were struggling to use their new smartphones. They wanted to video call their families or use messaging apps, but they found the interfaces too complicated and confusing. They felt a bit left behind by technology.
-He solved it in a very clever way. First, he spent a few weekends at the community center, patiently teaching them the basics. But he realized they often forgot the steps. So, being a programmer, he decided to build a simple app. He used Python to create a tool with a very clean interface—just a few big, colorful buttons for functions like "Video Call" or "Send Message." It was like a shortcut that bypassed all the complicated menus. He even made paper guides with QR codes that linked to his app.
-I think his method was smart for a few reasons. First, he didn't just give instructions; he created a lasting, practical tool. Second, he used his professional skills in a very kind and useful way. I remember seeing him help my grandma use it to call me when I was in my dorm in Dalian. . It showed me that smart problem-solving isn't just about complex code, but about understanding people's real needs and making their lives easier.
+The app I'd like to talk about is CapCut. It's a video editing application that I use on my phone.
+I use it quite often, probably several times a week. As a computer science student, I sometimes need to make short videos for my class projects, and this app is perfect for that.
+I use it in two main situations. First, for my university work in Dalian. When I finish a project, I can use CapCut to make a simple presentation video. Second, and more importantly, I use it for personal reasons. I really miss my family in Shenzhen. So, sometimes I ask my parents to send me short clips of my grandparents. I then use this app to edit them into a nice little family video. It makes me feel closer to home.
+I found this app about a year ago. I was searching online for a simple, user-friendly editing tool for a university assignment. Many people recommended it, so I downloaded it to try.
+I feel really positive about it. It's incredibly useful and easy to learn. One time, I even decided to pay for some extra features, like better filters. I spent a bit more money than I first planned, but it was totally worth it. It helps me practice my skills and, more importantly, it helps me save and share precious family memories. So for me, it's much more than just an app.
