--- a/问题本身.md
+++ b/问题本身.md
@@ -1,6 +1,7 @@
-Describe a person who solved a problem in a smart way
+Describe a program or app on your computer or phone
 You should say:
-Who this person is
-What the problem was
-How he/she solved it
-And explain why you think he/she did it in a smart way
+What it is
+How often you use it
+When/how you use it
+When/how you found it
+And explain how you feel about it
